crates/toml_edit/tests/snapshots/invalid/inline-table/no-close-02.stderr
TOML parse error at line 1, column 7
  |
1 | a={b=1
  |       ^
newlines are unsupported in inline tables, expected nothing
